src/test/deca/codegen/valid/homemade/object/classes_with_empty_main.deca
 // Description:
 //    empty instruction
 //
 // Results:
 //     4
 //
 // History:
 //    created 17/01/2020

class A {
    void a() {
        println("ok");
    }

    void b() {
        println("not ok");
    }
}

class B extends A {
    void b() {
        println("ok");
    }

    void c() {
        println("ok");
    }
}


{}

